Fix for YouTube videos & discussion tags on mobile

--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -1117,6 +1117,8 @@ ul.social-links>li.pinterest-link:hover {
 	padding:10px;
 	color:#333;
 	margin-right:10px;
+    margin-bottom:10px;
+    display:inline-block;
 }
 .spacebot {
 	margin-bottom:20px;
@@ -1501,18 +1503,21 @@ a:hover,a:focus {
 	margin-top: 10px;
 }
 
-@media (max-width: 320px) {
-
-	.youTubeVideo{
-		max-width:100%;
-	}
-
+/*
+iFrame fluid video css from http://css-tricks.com/NetMag/FluidWidthVideo/Article-FluidWidthVideo.php
+*/
+.youTubeVideo{
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
 }
 
-@media (max-width: 768px) {
-
-	.youTubeVideo{
-		max-width:560px;
-	}
-
+.youTubeVideo iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
+
